--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<!-- Body of the webpage -->
 		<div class="parallax picture1"></div>
 		<div class="text-body">
-			<h1>Ponudba:</h1>
+			<h1>Ponudbač:</h1>
 <p>Mi smo tukaj, da nam vi poveste kaj bi radi delali z računalnikom, mi pa vam povemo kaj boste za to potrebovali. <br>
 Hočete računalnik za urejanje slik in videov? <b>Dobite</b><br>
 Računalnik za <em>gaming</em>? <b>Dobite</b><br>
