--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</li>
 					<li class="nav-item dropdown ml-auto">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  <span class="navbar-text">Languageč</span>
+						  <span class="navbar-text">Language</span>
 						</a>
 						<div class="dropdown-menu header" aria-labelledby="navbarDropdown">
 						  <a class="dropdown-item" href="index.html"><img class="language" src="Media/slo.png" alt="Slovenščina" title="Slovenščina"></a>
