--- a/EN.html
+++ b/EN.html
@@ -28,7 +28,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-		    			<a id="getPrice" class="nav-link" href="mailto:michel.nikl@net.doba.si?&amp;subject=Price%20 &amp;body=Hello,%0D%0AI%20would%20like%20a%20the%20following%20computer.%0D%0AUse%20case:%0D%0ABudget:%0D%0AOther%20information:" target="_blank">Get offer!<span class="sr-only">(current)</span></a>
+		    			<a id="getPrice" class="nav-link" href="mailto:info@sestavimpc.com?&amp;subject=Price%20 &amp;body=Hello,%0D%0AI%20would%20like%20a%20the%20following%20computer.%0D%0AUse%20case:%0D%0ABudget:%0D%0AOther%20information:" target="_blank">Get offer!<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item dropdown ml-auto">
 						<a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,7 +47,7 @@
 		<div class="parallax picture1"></div>
 		<div class="text-body">
 			<h1>Offer:</h1>
-<p>We are here, so you can tell us what you want to do with you computer and will tell you what you need to accomplish that. <br>
+<p>We are here, so you can tell us what you want to do with you computer and we will tell you what you require. <br>
 Want a computer to edit photos and videos? <b>You got it</b><br>
 Computer for <em>gaming</em>? <b>Got it</b><br>
 One, that is good for <em>gaming</em> and also <em>streaming</em>? <b>Piece of cake…</b><br>
@@ -177,7 +177,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm">
-						<p class="footer">Contact: <a class= "email-link" href="mailto:michel.nikl@net.doba.si" target="_blank">info@gmail.com</a></p>
+						<p class="footer">Contact: <a class= "email-link" href="mailto:info@sestavimpc.com" target="_blank">info@sestavimpc.com</a></p>
 					</div>
 					<div class="col-sm">
 						
@@ -197,7 +197,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 							<hr>
 							<p>Activity code: 62.020</p>
 							<hr>
-							<p>Email: <a class= "email-link second-link" href="mailto:michel.nikl@net.doba.si" target="_blank">info@gmail.com</a></p>
+							<p>Email: <a class= "email-link second-link" href="mailto:info@sestavimpc.com" target="_blank">info@sestavimpc.com</a></p>
 						</div>
 					</div>
 				</div>
