--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-		    			<a id="getPrice" class="nav-link" href="mailto:michel.nikl@net.doba.si?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">Pridobi ponudbo!<span class="sr-only">(current)</span></a>
+		    			<a id="getPrice" class="nav-link" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">Pridobi ponudbo!<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item dropdown ml-auto">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -176,7 +176,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm">
-						<p class="footer">Kontakt: <a class= "email-link" href="mailto:michel.nikl@net.doba.si" target="_blank">info@gmail.com</a></p>
+						<p class="footer">Kontakt: <a class= "email-link" href="mailto:info@sestavimpc.com" target="_blank">info@sestavimpc.com</a></p>
 					</div>
 					<div class="col-sm">
 						
@@ -196,7 +196,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 							<hr>
 							<p>Šifra dejavnosti: 62.020</p>
 							<hr>
-							<p>Email: <a class= "email-link second-link" href="mailto:michel.nikl@net.doba.si" target="_blank">info@gmail.com</a></p>
+							<p>Email: <a class= "email-link second-link" href="mailto:info@sestavimpc.com" target="_blank">info@sestavimpc.com</a></p>
 						</div>
 					</div>
 				</div>
