--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Kaj pa takega, da ima odlično ceno, pa bo uporabljen v pisarni za urejanje doku
 		<div class="parallax picture5"></div>
 		<div class="text-body">
 			<p><b>Torej kaj dobite, ko se odločite za nas?</b> </p>
-<p>Individualno svetovanje za vaš sanski računalnik in izbiro komponent, katere bodo delovale optimalno za vaše potrebe v vašem cenovnem okviru - to dosežemo tako, da vsak računalnik naročimo po delih, kar zagotavlja najnižjo možno ceno. </p>
+<p>Individualno svetovanje za vaš sanjski računalnik in izbiro komponent, katere bodo delovale optimalno za vaše potrebe v vašem cenovnem okviru - to dosežemo tako, da vsak računalnik naročimo po delih, kar zagotavlja najnižjo možno ceno. </p>
 <p> Za vas sestavimo računalnik in uredimo kable, da je izgled kar se da lep in čist. <br>
 Preverimo vsako komponento, če deluje tako kot mora. To vsebuje stres test za procesor, RAM in grafično kartico. <br>
 Preverimo še disk/e, če vsebuje/jo slabe sektorje in če dosega/jo hitrosti branja in pisanja, kot je od njega/njih pričakovano. <br>
@@ -80,7 +80,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 <p>Zaradi mnogih izkušenj s sestavljanjem računalnikov, znamo ločiti med dobrimi funkcijami in mimikami na komponentah proizvajalcev. </p>
 <p>Kupljen računalnik bo prilagojen za vaše potrebe. </p>
 <p>Ker je računalnik sestavljen v delih ima vsaka komponenta svojo garancijo, katerih obdobje je v večini enako ali daljše od garancije že naprej sestavljenih računalnikov. </p>
-<p>Če izbere nas, izbere bolj ekološki produkt, Kot je že omenjeno mnogokrat, je računalnik v delih. To pomeni, da kadar odpove katera koli komponenta jo lahko enostavno zamenjamo z drugo in s tem podaljšamo življenjsko dobo računalnika, ter zmanjšamo poseg v denarnico. </p>
+<p>Če izberete nas, izberete bolj ekološki produkt saj, kot je že omenjeno mnogokrat, je računalnik v delih. To pomeni, da kadar odpove katera koli komponenta jo lahko enostavno zamenjamo z drugo in s tem podaljšamo življenjsko dobo računalnika, ter zmanjšamo poseg v denarnico. </p>
 		</div>
 		<div class="parallax picture3"></div>
 		<div class="text-body">
