--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	    
 	    <!-- Style CSS -->
-	    <link rel="stylesheet" type="text/css" href="Style/style.css">
+	    <link rel="stylesheet" type="text/css" href="Style/style-index.css">
 
 	    <!-- Fonts -->
 	    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
@@ -36,7 +36,7 @@
 						</a>
 						<div class="dropdown-menu header" aria-labelledby="navbarDropdown">
 						  <a class="dropdown-item" href="index.html"><img class="language" src="Media/slo.png" alt="Slovenščina" title="Slovenščina"></a>
-						  <a class="dropdown-item" href="EN.html"><img class="language" src="Media/ang.png" alt="English" title="English"></a>
+						  <a class="dropdown-item" href="indexEN.html"><img class="language" src="Media/ang.png" alt="English" title="English"></a>
 						</div>
 					</li>
 				</ul>
@@ -44,7 +44,19 @@
 		</nav>
 
 		<!-- Body of the webpage -->
-		
+		<div class="placeholder"></div>
+		<div class="text-body">
+			<a class="dont-change-link-format" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">
+				<h1 class="besedilo">Po meri sestavljen računalnik<br>za samo</h1>
+				<h1 class="cena">59€!</h1>
+			</a>
+		</div>
+
+		<div class="text-body">
+			<a class="dont-change-link-format" href="izvediVec.html">
+				<h1 class="besedilo">Izvedi več!</h1>
+			</a>
+		</div>
 		
 		<footer>
 			<div class="container-fluid">
