--- a/izvediVec.html
+++ b/izvediVec.html
@@ -35,8 +35,8 @@
 						  <span class="navbar-text">Language</span>
 						</a>
 						<div class="dropdown-menu header" aria-labelledby="navbarDropdown">
-						  <a class="dropdown-item" href="index.html"><img class="language" src="Media/slo.png" alt="Slovenščina" title="Slovenščina"></a>
-						  <a class="dropdown-item" href="EN.html"><img class="language" src="Media/ang.png" alt="English" title="English"></a>
+						  <a class="dropdown-item" href="izvediVec.html"><img class="language" src="Media/slo.png" alt="Slovenščina" title="Slovenščina"></a>
+						  <a class="dropdown-item" href="izvediVecEN.html"><img class="language" src="Media/ang.png" alt="English" title="English"></a>
 						</div>
 					</li>
 				</ul>
