--- a/izvediVecEN.html
+++ b/izvediVecEN.html
@@ -20,7 +20,7 @@
 	<body>
 		<!-- Navigation bar -->
 		<nav class="navbar navbar-expand-sm navbar-dark">
-			<a class="navbar-brand" href="EN.html"><img src="Logo/text-logo-small-white.png" class="logo" alt="Logo"></a>
+			<a class="navbar-brand" href="indexEN.html"><img src="Logo/text-logo-small-white.png" class="logo" alt="Logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
