--- a/indexEN.html
+++ b/indexEN.html
@@ -20,7 +20,7 @@
 	<body>
 		<!-- Navigation bar -->
 		<nav class="navbar navbar-expand-sm navbar-dark">
-			<a class="navbar-brand" href="index.html"><img src="Logo/text-logo-small-white.png" class="logo" alt="Logo"></a>
+			<a class="navbar-brand" href="indexEN.html"><img src="Logo/text-logo-small-white.png" class="logo" alt="Logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -72,15 +72,15 @@
 						  <span>O nas</span>
 						</a>
 						<div class="dropdown-menu footer">
-							<p>Naziv podjetja: Michel Nikl s.p., Računalniške Storitve</p>
+							<p>Company name: Michel Nikl s.p., Računalniške Storitve</p>
 							<hr>
-							<p>Sedež podjetja: Spodnja Velka 20a, 2213 Zgornja Velka</p>
+							<p>Headquarters: Spodnja Velka 20a, 2213 Zgornja Velka</p>
 							<hr>
-							<p>DŠ: 44447558</p>
+							<p>VAT numb.: 44447558</p>
 							<hr>
-							<p>MŠ: 8404135000</p>
+							<p>Registration numb.: 8404135000</p>
 							<hr>
-							<p>Šifra dejavnosti: 62.020</p>
+							<p>Activity code: 62.020</p>
 							<hr>
 							<p>Email: <a class= "email-link second-link" href="mailto:info@sestavimpc.com" target="_blank">info@sestavimpc.com</a></p>
 						</div>
