--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="placeholder"></div>
 		<div class="text-body">
 			<a class="dont-change-link-format" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">
-				<h1 class="besedilo">Po meri sestavljen računalniksad<br>za samo</h1>
+				<h1 class="besedilo">Po meri sestavljen računalnik<br>za samo</h1>
 				<h1 class="cena">59€!</h1>
 			</a>
 		</div>
