--- a/izvediVec.html
+++ b/izvediVec.html
@@ -63,7 +63,7 @@ Kaj pa takega, da ima odlično ceno, pa bo uporabljen v pisarni za urejanje doku
 Preverimo vsako komponento, če deluje tako kot mora. To vsebuje stres test za procesor, RAM in grafično kartico. <br>
 Preverimo še disk/e, če vsebuje/jo slabe sektorje in če dosega/jo hitrosti branja in pisanja, kot je od njega/njih pričakovano. <br>
 Preverimo še delovanje celotnega hladilnega sistema, če deluje kar se le da hladno in s tem zagotovimo najboljšo življenjsko dobo računalnika. <br>
-Vse skupaj lahko dostavimo na naprej določeno <a href="#location" class="location-link">lokacijo v Mariboru</a> ali pa vam pošljemo po pošti na vaš naslov. <br>
+Nudimo tudi možnost za dostavo na naprej določeno <a href="#location" class="location-link">lokacijo v Mariboru</a> ali pa vam napravo pošljemo po pošti na vaš naslov. <br>
 In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih težavah do 14 dni po nakupu. </p>
 <br>
 <p>Na vašo zahtevo še vam lahko:</p>
@@ -92,13 +92,13 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 						<p class="content-of-tablecell">Cena vseh komponent po naši nabavni ceni.</p><hr>
 					</td>
 					<td class="right-side">
-						X
+						X€
 					</td>
 				</tr>
 				<tr>
 					<td class="left-side">
 						<p class="title-of-tabledata">Standardna ponudba</p>
-						<p class="content-of-tablecell">Vključuje svetovanje, sestavo, testiranje, 14dni pomoči po nakupu in dostavo v Maribor.</p>
+						<p class="content-of-tablecell">Vključuje svetovanje, sestavo, testiranje in 14dni pomoči po nakupu.</p>
 						<hr>
 					</td>
 					<td class="right-side">
@@ -112,8 +112,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 						<hr>
 					</td>
 					<td class="right-side">
-						~7€
-						<p class="small-text">Odvisna od teže pošiljke</p>
+						5€
 					</td>
 				</tr>
 				<tr>
@@ -123,8 +122,8 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 						<hr>
 					</td>
 					<td class="right-side">
-						~80€
-						<p class="small-text">Odvisna od cene na trgu</p>
+						80€
+						<p class="small-text">Lahko se spremeni v odvisnosti<br>od cene na trgu</p>
 					</td>
 				</tr>
 				<tr>
@@ -160,8 +159,8 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 		</div>
 		<div class="parallax picture4"></div>
 		<div class="text-body">
-			<h1 id="location">Prevzem:</h1>
-			<p>Osebni prevzem naprave je možen ob naprej dogovorjeni uri na naprej dogovorjenem mestu v Mariboru.</p>
+			<h1 id="location">Osebni prevzem:</h1>
+			<p>Nudimo tudi možnost osebnega prevzema naprave v Mariboru, ob dogovorjeni uri na dogovorjenem mestu.</p>
 			<div class="mapouter">
 				<div class="gmap_canvas">
 					<iframe id="gmap_canvas" src="https://maps.google.com/maps?q=maribor&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
