--- a/izvediVecEN.html
+++ b/izvediVecEN.html
@@ -92,7 +92,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 						<p class="content-of-tablecell">Price of all components without any markup. </p><hr>
 					</td>
 					<td class="right-side">
-						X
+						X€
 					</td>
 				</tr>
 				<tr>
@@ -112,8 +112,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 						<hr>
 					</td>
 					<td class="right-side">
-						~7€
-						<p class="small-text">Depends on the package</p>
+						5€
 					</td>
 				</tr>
 				<tr>
@@ -123,8 +122,8 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 						<hr>
 					</td>
 					<td class="right-side">
-						~80€
-						<p class="small-text">Depends on market price</p>
+						80€
+						<p class="small-text">Price may change depending on the market</p>
 					</td>
 				</tr>
 				<tr>
@@ -162,7 +161,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 		<div class="parallax picture4"></div>
 		<div class="text-body">
 			<h1 id="location">Personal pick-up:</h1>
-			<p>Personal pick-up is possible on a pre agreed location and on a pre agreed time in Maribor.</p>
+			<p>We offer personal pick-up on a pre agreed location and on a pre agreed time in Maribor.</p>
 			<div class="mapouter">
 				<div class="gmap_canvas">
 					<iframe id="gmap_canvas" src="https://maps.google.com/maps?q=maribor&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
