--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-		    			<a id="getPrice" class="nav-link" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">Pridobi ponudbo!<span class="sr-only">(current)</span></a>
+		    			<!--<a id="getPrice" class="nav-link" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">Pridobi ponudbo!<span class="sr-only">(current)</span></a> -->
 					</li>
 					<li class="nav-item dropdown ml-auto">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,7 +47,7 @@
 		<div class="placeholder"></div>
 		<div class="text-body">
 			<a class="dont-change-link-format" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">
-				<h1 class="besedilo">Po meri sestavljen računalnik<br>za samo</h1>
+				<h1 class="besedilo">Sestavimo računalnik po želji<br>za samo</h1>
 				<h1 class="cena">59€!</h1>
 			</a>
 		</div>
