--- a/izvediVec.html
+++ b/izvediVec.html
@@ -89,7 +89,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 				<tr>
 					<td class="left-side first-element-of-table">
 						<p class="title-of-tabledata">Komponente</p>
-						<p class="content-of-tablecell">Cena vseh komponent po naši nabavni ceni.</p><hr>
+						<p class="content-of-tablecell">Cena vseh komponent po naši nabavni ceni</p><hr>
 					</td>
 					<td class="right-side">
 						X€
@@ -98,7 +98,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 				<tr>
 					<td class="left-side">
 						<p class="title-of-tabledata">Standardna ponudba</p>
-						<p class="content-of-tablecell">Vključuje svetovanje, sestavo, testiranje in 14dni pomoči po nakupu.</p>
+						<p class="content-of-tablecell">Vključuje svetovanje, sestavo, testiranje in 14dni pomoči po nakupu</p>
 						<hr>
 					</td>
 					<td class="right-side">
@@ -108,7 +108,7 @@ In še kot češnja na smetani, vam ponujamo brezplačno pomoč pri morebitnih t
 				<tr>
 					<td class="left-side">
 						<p class="title-of-tabledata">Cena pošiljanja</p>
-						<p class="content-of-tablecell">V primeru pošiljanja preko pošte.</p>
+						<p class="content-of-tablecell">V primeru pošiljanja preko pošte</p>
 						<hr>
 					</td>
 					<td class="right-side">
