--- a/izvediVecEN.html
+++ b/izvediVecEN.html
@@ -89,7 +89,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 				<tr>
 					<td class="left-side first-element-of-table">
 						<p class="title-of-tabledata">Components</p>
-						<p class="content-of-tablecell">Price of all components without any markup. </p><hr>
+						<p class="content-of-tablecell">Price of all components without any markup</p><hr>
 					</td>
 					<td class="right-side">
 						X€
@@ -98,7 +98,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 				<tr>
 					<td class="left-side">
 						<p class="title-of-tabledata">Standard offer</p>
-						<p class="content-of-tablecell">Includes consulting, assembly, testing, 14 days support after purchase and delivery to Maribor. </p>
+						<p class="content-of-tablecell">Includes consulting, assembly, testing, 14 days support after purchase and delivery to Maribor</p>
 						<hr>
 					</td>
 					<td class="right-side">
@@ -108,7 +108,7 @@ And as a cherry on top, we also offer you 14 days of free support in case proble
 				<tr>
 					<td class="left-side">
 						<p class="title-of-tabledata">Shipping</p>
-						<p class="content-of-tablecell">In case of mail delivery. </p>
+						<p class="content-of-tablecell">In case of mail delivery</p>
 						<hr>
 					</td>
 					<td class="right-side">
