--- a/izvediVecEN.html
+++ b/izvediVecEN.html
@@ -28,7 +28,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-		    			<a id="getPrice" class="nav-link" href="mailto:info@sestavimpc.com?&amp;subject=Price%20 &amp;body=Hello,%0D%0AI%20would%20like%20to%20buy%20a%20computer.%0D%0AUse%20case:%0D%0ABudget:%0D%0AOther%20information:" target="_blank">Get offer!<span class="sr-only">(current)</span></a>
+		    			<a id="getPrice" class="nav-link" href="mailto:info@sestavimpc.com?&amp;subject=Price%20 &amp;body=Hello,%0D%0AI%20would%20like%20to%20buy%20a%20computer.%0D%0AUse%20case:%0D%0ABudget:%0D%0ANeed%20WiFi?%0D%0AOther%20information:" target="_blank">Get offer!<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item dropdown ml-auto">
 						<a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
