--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<!-- Body of the webpage -->
 		<div class="placeholder"></div>
 		<div class="text-body">
-			<a class="dont-change-link-format" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0ADruge%20informacije:" target="_blank">
+			<a class="dont-change-link-format" href="mailto:info@sestavimpc.com?&amp;subject=Poizvedba%20cene%20 &amp;body=Pozdravljeni,%0D%0Azanimam%20se%20za%20sledeč%20računalnik.%0D%0ANamen%20uporabe:%0D%0ACenovni%20okvir:%0D%0APotrebujem%20WiFi?%0D%0ADruge%20informacije:" target="_blank">
 				<h1 class="besedilo">Sestavimo računalnik po želji<br>za samo</h1>
 				<h1 class="cena">59€!</h1>
 			</a>
